fix subtitles wrapping before amara break

--- a/www/less/main/pages/content-video.less
+++ b/www/less/main/pages/content-video.less
@@ -196,7 +196,7 @@
 									line-height: 100px;
 									text-align: center;
 									span {
-										max-width: 470px;
+										max-width: 490px;
 										display: inline-block;
 										vertical-align: middle;
 										line-height: 1.2;
